added push and pull

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <li>git status - status of current local repository</li>
             <li>git add - path-to-file</li>
             <li>git commit -am "added new file index.html"</li>
+            <li>git push</li>
+            <li>git pull</li>
         </ul>
 </div>
     <div></div>
